tests/snapshots/run_wpt_conformance__trtx_log_float16_positive_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "log.https.any.js",
    "log float16 positive 5D tensor",
    "trtx",
    "PASS",
)
